# bandsocks

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  rust.yml  tests.yml
cli/: Cargo.toml
cli/src/: cli.yml  main.rs
examples/: hello-world.rs  pull-progress.rs  simple.rs
protocol/: Cargo.toml
protocol/src/: abi.rs  buffer.rs  de.rs  lib.rs  messages.rs  ser.rs  tests.rs  types.rs
runtime/: Cargo.toml  build.rs
runtime/src/: client.rs  container.rs  errors.rs  filesystem.rs  image.rs  ipcserver.rs  lib.rs  loader.rs  manifest.rs  sand.rs  storage.rs
runtime/src/filesystem/: mmap.rs  mod.rs  tar.rs  vfs.rs
runtime/src/linux/: mod.rs
sand/: .gitignore  Cargo.toml  sand-Cargo.toml  size.sh  stow.sh
sand/src/: abi.rs  bpf.rs  emulator.rs  init.rs  ipc.rs  lib.rs  main.rs  nolibc.rs  parser.rs  process.rs  protocol.rs  ptrace.rs  seccomp.rs  tracer.rs
sand/src/binformat/: elf64.rs  header.rs  mod.rs  script.rs
sand/src/mem/: kernel.rs  maps.rs  mod.rs  page.rs  rw.rs  string.rs
sand/src/process/: layout.rs  loader.rs  maps.rs  mod.rs  remote.rs  stack.rs  syscall.rs  table.rs  task.rs
sand/src/remote/: file.rs  mem.rs  mod.rs  scratchpad.rs  trampoline.rs
sand/src/syscall/: dispatch.rs  fs.rs  mod.rs  result.rs  user.rs
src/: cli.yml  client.rs  container.rs  errors.rs  image.rs  ipcserver.rs  lib.rs  main.rs  manifest.rs  process.rs  registry.rs  sand.rs  storage.rs  taskcall.rs
src/container/: builder.rs  mod.rs
src/filesystem/: mmap.rs  mod.rs  mount.rs  socket.rs  storage.rs  tar.rs  vfs.rs
src/filesystem/storage/: key.rs  mod.rs  writer.rs
src/image/: digest.rs  mod.rs  name.rs  registry.rs  repository.rs  tag.rs  tests.rs  version.rs
src/registry/: auth.rs  builder.rs  client.rs  default.rs  mod.rs  progress.rs
tests/: alpine.rs  busybox.rs  busybox_glibc.rs  busybox_musl.rs  busybox_uclibc.rs  cli_crate.rs  debian.rs  examples.rs  ffmpeg.rs  gcr_golang.rs  protocol_crate.rs  python.rs  sand_crate.rs  sand_unit_tests.rs  ubuntu.rs
