[package]
name = "bandsocks"
version = "0.2.0"
description = "Experimental embeddable container sandbox (not working yet)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/bandsocks"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]

# Extra deps for the command line binary
env_logger = "0.7"
clap = { version = "2.33", features = ["yaml"] }

# Sandbox internals are a separate workspace with a separate (nested) build
bandsocks-sand = { path = "sand" }

# Runtime library dependencies
fd-queue = { version = "1.0.0-beta.2", features = [ "tokio-fd" ] }
tokio = { version = "0.2", features = ["rt-core", "fs", "macros"] }
reqwest = "0.10"
flate2 = "1.0"
futures-util = "0.3"
hash32 = "0.1"
hash32-derive = "0.1"
heapless = "0.5"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
memmap = "0.7"
pentacle = "1.0"
regex = { version = "1.3", default-features = false, features = [ "std", "perf" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tar = "0.4"
thiserror = "1.0"

# Used by integration tests
[dev-dependencies]
file_limit = "0.0"

# Used by build.rs
[build-dependencies]
build-deps = "0.1"
