[package]
name = "bandsocks"
version = "0.2.0"
description = "Experimental embeddable container sandbox (not working yet)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/bandsocks"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]

bytes = "0.5"
fd-queue = { version = "1.0.0-beta.2", features = [ "tokio-fd" ] }
flate2 = "1.0.19"
futures-util = "0.3"
generic-array = "0.14"
hash32 = "0.1"
hash32-derive = "0.1"
http = "0.2"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
memfd = "0.3"
memmap = "0.7"
pin-project = "1"
rand = "0.7"
regex = { version = "1.3", default-features = false, features = [ "std", "perf" ] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "0.2", features = ["fs", "time", "blocking", "uds", "io-util", "io-std", "macros"] }

[dev-dependencies]
file_limit = "0.0"
env_logger = "0.7"

[build-dependencies]
build-deps = "0.1"

[workspace]
members = ["cli"]
