[package]
name = "bandsocks"
version = "0.2.2"
description = "Experimental embeddable container sandbox"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/bandsocks"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]

bandsocks-protocol = { version = "0.2", path = "protocol" }
bytes = "0.5"
fd-queue = { version = "1.0.0-beta.2", features = [ "tokio-fd" ] }
flate2 = "1.0.19"
futures-util = "0.3"
http = "0.2"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
memfd = "0.3"
memmap = "0.7"
pin-project = "1"
rand = "0.7"
regex = { version = "1.3", default-features = false, features = [ "std", "perf" ] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tar = "0.4"
tempfile = "3.1"
thiserror = "1.0"
tokio = { version = "0.2", features = ["fs", "time", "blocking", "uds", "io-util", "io-std", "macros", "process", "sync"] }

[dev-dependencies]
assert_cmd = "0.10"
env_logger = "0.7"
file_limit = "0.0"
predicates = "1"

[build-dependencies]
build-deps = "0.1"
fs_extra = "1.2.0"

[workspace]
members = ["cli", "protocol"]
