[package]
name = "bandsocks-cli"
version = "0.2.0"
description = "Command line interface for running containers in bandsocks"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/bandsocks"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[[bin]]
name = "bandsocks"
path = "src/main.rs"

[dependencies]
bandsocks = { path = ".." }
clap = { version = "2.33", features = ["yaml"] }
tokio = {version = "0.2", features = ["rt-core", "macros"]}
env_logger = "0.7"
log = "0.4"
