[package]
name = "bandsocks-cli"
version = "0.2.2"
description = "Command line interface for running containers in bandsocks"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/bandsocks"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[[bin]]
name = "bandsocks"
path = "src/main.rs"

[dependencies]
bandsocks = { version = "0.2.2", path = ".." }
clap = { version = "2.33", features = ["yaml"] }
env_logger = "0.7"
log = "0.4"
tokio = {version = "0.2", features = ["rt-core", "macros"]}
