[package]
name = "bandsocks-runtime"
version = "0.1.0"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]

log = "0.4.11"
directories-next = "1.0.1"
vfs = "0.4.0"
pentacle = "0.2.0"
pete = "0.3.0"
dkregistry = { git = "https://github.com/camallo/dkregistry-rs.git" }
memmap = "0.7.0"
lazy_static = "1.4.0"
libc = "0.2.77"
regex = "1.3.9"
tar = "0.4.30"
tokio = { version = "0.2.22", features = ["rt-core", "fs"] }
thiserror = "1.0"



