[package]
name = "bandsocks-runtime"
version = "0.1.0"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]

directories-next = "1.0.1"
dkregistry = { git = "https://github.com/camallo/dkregistry-rs.git" }
flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
lazy_static = "1.4.0"
libc = "0.2.77"
log = "0.4.11"
memmap = "0.7.0"
pentacle = "0.2.0"
pete = "0.3.0"
regex = "1.3.9"
serde = "1.0.116"
serde_json = "1.0.57"
sha2 = "0.9.1"
tar = "0.4.30"
thiserror = "1.0"
tokio = { version = "0.2.22", features = ["rt-core", "fs"] }
vfs = "0.4.0"
