[package]
name = "bandsocks-sand"
version = "0.1.1"
description = "Experimental embeddable container sandbox (not working yet)"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scanlime/bandsocks"
authors = ["Micah Elizabeth Scott <micah@scanlime.org>"]
edition = "2018"

[dependencies]

as-slice = "0.1.4"
compiler_builtins = { version = "0.1.36", features = [ "compiler-builtins", "mem" ] }
memoffset = "0.5.6"
heapless = "0.5.6"
typenum = "1.12.0"
hash32 = "0.1.1"
hash32-derive = "0.1.0"
pin-project = "1"
seccomp-tiny = "0.1.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
sc = "0.2.3"
ssmarshal = { version = "1.0.0", default-features = false }

[workspace]
# Separate workspace, with our own build profiles:

[profile.release]
lto = 'fat'
codegen-units = 1
incremental = false
panic = 'abort'
opt-level = 's'

[profile.dev]
lto = 'fat'
codegen-units = 1
incremental = false
panic = 'abort'
opt-level = 's'
